--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -75,91 +75,6 @@ body {
   height: 100%;
 }
 
-.scores {
-  margin-top: 2rem;
-  background-color: rgba(255, 255, 255, 0.9);
-  color: var(--color-secondary);
-  border-radius: .8rem;
-  max-width: 22rem;
-  padding: .6rem 1.2rem;
-  box-shadow: 0 0 10px 4px var(--color-dark-1);
-}
-
-.scores h2 {
-  color: var(--color-dark-2);
-  font-size: 1rem;
-  border-bottom: 2px solid rgba(138, 138, 138, .35);
-  margin: .6rem;
-  padding: .2rem 0;
-  width: 100%;
-  text-align: start;
-  text-transform: uppercase;
-}
-
-.scores-list {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  gap: 1rem;
-  max-height: calc(6.8rem + 3px);
-  width: 100%;
-  border-radius: 1rem;
-  padding: .6rem;
-}
-
-.score-item {
-  padding: 0;
-  font-size: 1.2rem;
-  line-height: 1.2rem;
-  opacity: .35;
-  font-weight: 600;
-  border-bottom: 1px dashed var(--color-secondary);
-  min-width: 50%;
-}
-
-.score-item.top {
-  opacity: 1;
-}
-
-.score-item.current {
-  opacity: 1;
-  color: var(--color-primary-darker);
-  border-color: var(--color-primary-darker);
-}
-
-.score-item span {
-  margin-left: .8rem;
-}
-
-.clear-scores-btn {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-  appearance: none;
-  background-color: #eb1c24;
-  color: #FFF;
-  border: none;
-  font-size: 1.2rem;
-  margin-top: .5rem;
-  opacity: .8;
-  cursor: pointer;
-  padding: .4rem 1.2rem;
-  border-radius: 8px;
-  transition: opacity .3s ease;
-}
-
-.clear-scores-btn:hover {
-  opacity: 1;
-}
-
-.clear-scores-btn span:first-of-type {
-  width: 14px;
-}
-
-.clear-scores-btn span img {
-  width: 100%;
-}
-
 .start-btn button {
   background-color: var(--color-primary);
   border: 4px solid var(--color-dark-1);
@@ -279,6 +194,102 @@ body {
   pointer-events: none;
 }
 
+/* Scores box */
+.scores {
+  margin-top: 2rem;
+  background-color: rgba(255, 255, 255, 0.9);
+  color: var(--color-secondary);
+  border-radius: .8rem;
+  max-width: 22rem;
+  padding: .6rem 1.2rem;
+  box-shadow: 0 0 10px 4px var(--color-dark-1);
+}
+
+.scores h2 {
+  color: var(--color-dark-2);
+  font-size: 1rem;
+  border-bottom: 2px solid rgba(138, 138, 138, .35);
+  margin: .6rem;
+  padding: .2rem 0;
+  width: 100%;
+  text-align: start;
+  text-transform: uppercase;
+}
+
+.scores-list {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  gap: 1rem;
+  max-height: calc(6.8rem + 3px);
+  width: 100%;
+  border-radius: 1rem;
+  padding: .6rem;
+}
+
+.score-item {
+  padding: 0;
+  font-size: 1.2rem;
+  line-height: 1.2rem;
+  opacity: .35;
+  font-weight: 600;
+  border-bottom: 1px dashed var(--color-secondary);
+  min-width: 50%;
+}
+
+.score-item.top {
+  opacity: 1;
+}
+
+.score-item.current {
+  opacity: 1;
+  color: var(--color-primary-darker);
+  border-color: var(--color-primary-darker);
+}
+
+.score-item span {
+  margin-left: .8rem;
+}
+
+.clear-scores-btn {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  appearance: none;
+  background-color: #eb1c24;
+  color: #FFF;
+  border: none;
+  font-size: 1.2rem;
+  margin-top: .5rem;
+  opacity: .8;
+  cursor: pointer;
+  padding: .4rem 1.2rem;
+  border-radius: 8px;
+  transition: opacity .3s ease;
+}
+
+.clear-scores-btn:hover {
+  opacity: 1;
+}
+
+.clear-scores-btn span:first-of-type {
+  width: 14px;
+}
+
+.clear-scores-btn span img {
+  width: 100%;
+}
+
+/* Footer */
+.footer {
+  text-align: center;
+  font-size: 14px;
+  margin-top: 18px;
+  color: var(--color-light);
+  font-weight: 600;
+  opacity: .5;
+}
+
 /* Media queries */
 @media screen and (max-height: 542px) and (orientation: landscape) {
   .title {
@@ -324,6 +335,11 @@ body {
     max-width: 105px;
     margin: 4px;
   }
+
+  .footer {
+    margin-top: 22px;
+    font-size: 16px;
+  }
 }
 
 @media screen and (min-width: 641px) and (min-height: 542px) and (orientation: landscape) {
@@ -350,6 +366,11 @@ body {
     width: calc(100%/8 - 8px);
     max-width: 100px;
     margin: 4px;
+  }
+
+  .footer {
+    margin-top: 22px;
+    font-size: 16px;
   }
 }
 
